@@ -1,5 +1,7 @@
 --- CHANGELOG ---
 --- TBD ---
+    * Added safety check for updated binary files which can cause 
+      issues.
     * Fixed so that a matrix of all the result from a binary file can 
       be retrieved even if delayed loading is used.
       
